--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 services:
   - type: web
     name: docutool-backend
-    runtime: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.9
+    env: docker
+    plan: starter  # required for Docker
+    dockerfilePath: ./Dockerfile
