--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,8 @@ services:
   - type: web
     name: docutool-backend
     env: docker
-    plan: starter  # required for Docker
-    dockerfilePath: ./Dockerfile
+    plan: free
+    autoDeploy: true
+    envVars:
+      - key: FLASK_ENV
+        value: production
